# pypolite

./: .gitignore  README.md  pyproject.toml  requirements.txt
pypolite/: django_middleware.py  fastapi_middleware.py  flask_middleware.py  profanity.py
pypolite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_django_middleware.py  test_fastapi_middleware.py  test_flask_middleware.py  test_profanity.py  test_regex_profanity.py  test_word_profanity.py
